versions/v0.17.x/service/python-sdk/client/client.mdx
---
title: "Client"
mode: "wide"
---

`Client` is the main class exposed by the CyborgDB Python SDK. It provides an interface to interact with the CyborgDB vector database service, allowing you to create and manage encrypted indexes.

## Constructor

```python
Client(base_url, api_key, verify_ssl=None)
```

Initializes a new CyborgDB `Client` instance for connecting to a CyborgDB microservice.

### Parameters
| Parameter | Type | Default | Description |
|-----------|------|---------|-------------|
| `base_url` | `str` | - | Base URL of the CyborgDB microservice endpoint |
| `api_key` | `str` | - | API key for authentication with the microservice |
| `verify_ssl` | `bool` | `None` | _(Optional)_ SSL verification. When `None`, automatically disabled for `localhost` and `http://` URLs |

You can get an API key from the [CyborgDB Admin Dashboard](https://cyborgdb.co). For more info, follow [this guide](../../../intro/get-api-key).

<Note>`api_key` is **only required when the service has authentication enabled** — i.e. `CYBORGDB_SERVICE_ROOT_KEY` is set on the service. When the service runs unauthenticated (the default), you can omit `api_key`.</Note>

### Example Usage

```python
from cyborgdb import Client

# Create client with API key
client = Client(base_url='http://localhost:8000', api_key='your-api-key')
```

## Error Handling

The `Client` class includes comprehensive error handling that processes different types of API errors:

- **HTTP Errors**: Status codes and response details are logged and converted to meaningful error messages
- **Validation Errors**: Field validation failures are formatted with detailed information
- **Network Errors**: Connection and timeout issues are handled gracefully

All methods throw standard Python exceptions with descriptive messages for easier debugging and error handling in your application.

## Type Safety

The Python SDK provides type hints for better development experience:

- Type annotations for all method parameters and return values
- IDE support with autocomplete and type checking
- Runtime validation of critical parameters